Fixed #154: Wrong font bold effect.

--- a/html/inc/common.css
+++ b/html/inc/common.css
@@ -1,7 +1,7 @@
 /* Stylesheet for ossxp documents at: http://www.ossxp.com/doc/ */
 
 html,body{min-height:100%;}
-body{font-style:normal;color:#4e4e4e;font-family: Verdana, sans-serif; padding: 0;}
+body{color:#4e4e4e; padding: 0;}
 
 /* body with background color */
 body {
